finishing implement all master routes
